--- a/WebVisualizations/comparisons.html
+++ b/WebVisualizations/comparisons.html
@@ -1,40 +1,40 @@
 <!DOCTYPE html>
 <html lang = "en-us">
-<head>
-    <meta charset="UTF-8">
-    <title>Pollution & Unemployment</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel = "stylesheet" href="assets/styles.css">
-</head>
-
-<nav class="navbar navbar-expand-sm navbar-light bg-light">
-    <a class="blue navbar-brand" href="https://lisaashway.github.io/Web-Design-Challenge/">Pollution & Unemployment</a>
-    <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-
-    <div class="navbar-collapse collapse" id="navbarSupportedContent" style="">
-        <ul class="navbar-nav ml-auto">
-            <li class="blue nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  Plots
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item" href="plot1.html">CO and Unemployment</a>
-                  <a class="dropdown-item" href="plot2.html">NO2 and Unemployment</a>
-                  <a class="dropdown-item" href="plot3.html">O3 and Unemployment</a>
-                  <a class="dropdown-item" href="plot4.html">SO2 and Unemployment</a>
-                </div>
-            </li>
-            <li class="blue nav-item">
-                <a class="nav-link" href="comparisons.html">Comparison</a>
-            </li>
-            <li class="blue nav-item">
-                <a class="nav-link" href="data.html">Data</a>
-            </li>
-        </ul>
-    </div>
-  </nav>
+    <head>
+        <meta charset="UTF-8">
+        <title>Pollution & Unemployment</title>
+        <link rel="stylesheet" href="assets/bootstrap.min.css">
+        <link rel = "stylesheet" href="assets/styles-plots.css">
+    </head>
+    
+    <nav class="navbar navbar-expand-sm navbar-light bg-light">
+        <a class="blue navbar-brand" href="https://lisaashway.github.io/Web-Design-Challenge/">Pollution & Unemployment</a>
+        <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+    
+        <div class="navbar-collapse collapse" id="navbarSupportedContent" style="">
+            <ul class="navbar-nav ml-auto">
+                <li class="blue nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                      Plots
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                      <a class="dropdown-item" href="plot1.html">CO and Unemployment</a>
+                      <a class="dropdown-item" href="plot2.html">NO2 and Unemployment</a>
+                      <a class="dropdown-item" href="plot3.html">O3 and Unemployment</a>
+                      <a class="dropdown-item" href="plot4.html">SO2 and Unemployment</a>
+                    </div>
+                </li>
+                <li class="blue nav-item">
+                    <a class="nav-link" href="comparisons.html">Comparison</a>
+                </li>
+                <li class="blue nav-item">
+                    <a class="nav-link" href="data.html">Data</a>
+                </li>
+            </ul>
+        </div>
+      </nav>
 
 <body>
     <div class = "jumbotron">
