--- a/WebVisualizations/plot1.html
+++ b/WebVisualizations/plot1.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <title>Pollution & Unemployment</title>
         <link rel="stylesheet" href="assets/bootstrap.min.css">
-        <link rel = "stylesheet" href="assets/styles.css">
+        <link rel = "stylesheet" href="assets/styles-plots.css">
     </head>
     
     <nav class="navbar navbar-expand-sm navbar-light bg-light">
@@ -21,17 +21,17 @@
                       Plots
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <a class="dropdown-item" href="WebVisualizations/plot1.html">CO and Unemployment</a>
-                      <a class="dropdown-item" href="WebVisualizations/plot2.html">NO2 and Unemployment</a>
-                      <a class="dropdown-item" href="WebVisualizations/plot3.html">O3 and Unemployment</a>
-                      <a class="dropdown-item" href="WebVisualizations/plot4.html">SO2 and Unemployment</a>
+                      <a class="dropdown-item" href="plot1.html">CO and Unemployment</a>
+                      <a class="dropdown-item" href="plot2.html">NO2 and Unemployment</a>
+                      <a class="dropdown-item" href="plot3.html">O3 and Unemployment</a>
+                      <a class="dropdown-item" href="plot4.html">SO2 and Unemployment</a>
                     </div>
                 </li>
                 <li class="blue nav-item">
-                    <a class="nav-link" href="WebVisualizations/comparisons.html">Comparison</a>
+                    <a class="nav-link" href="comparisons.html">Comparison</a>
                 </li>
                 <li class="blue nav-item">
-                    <a class="nav-link" href="WebVisualizations/data.html">Data</a>
+                    <a class="nav-link" href="data.html">Data</a>
                 </li>
             </ul>
         </div>
@@ -43,7 +43,7 @@
     <div class = "row justify-content-center">
 
         <div class  = "card bg-white border-success col-10" style = "padding: 2rem;">
-            <h2 class = "text-center">CO2 and Unemployment from 2005 to 2017</h2>
+            <h2 class = "text-center">CO and Unemployment from 2005 to 2017</h2>
             <h6><br><br>
                 The figure shown below plots the percentage of Unemployment in the US, alongside Carbon Monoxide captured in the atmosphere. 
                 We can see that the release of CO has been decreasing steadily over time, but during the peak of Unemployment (2009), it decreases at a much faster rate.
