--- a/WebVisualizations/data.html
+++ b/WebVisualizations/data.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang = "en-us">
-<head>
+  <head>
     <meta charset="UTF-8">
     <title>Pollution & Unemployment</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel = "stylesheet" href="assets/styles.css">
+    <link rel="stylesheet" href="assets/bootstrap.min.css">
+    <link rel = "stylesheet" href="assets/styles-plots.css">
 </head>
 
 <nav class="navbar navbar-expand-sm navbar-light bg-light">
